2006-09-07  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpsourcecore.[ch] (gimp_source_core_motion): pass
	the width and height of the sub-area of paint_area to
	GimpSourceCore::motion().

	* app/paint/gimpclone.c (gimp_clone_motion)
	* app/paint/gimpheal.c (gimp_heal_motion): use the new parameters
	instead of taking these values from srcPR->w and ->h, which was
	very confusing.

2006-09-07  Sven Neumann  <sven@gimp.org>

	* app/actions/edit-actions.c (edit_actions_setup): set the context
	property on the "edit-fill-pattern" action.

2006-09-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/tools-enums.[ch]: add GimpRectangleConstraint
	enum.

	* app/tools/gimprectangletool.[ch]: replace "constrain"
	boolean with "constraint" enum property.  Implement
	constraints in motion handler -- the implementation
	is rather elegant but pretty tricky.

	* app/tools/gimpcroptool.c: constrain to image bounds,
	or to active drawable bounds if "current layer only"
	option is checked.
	
	* app/tools/gimpellipseselecttool.c
	* app/tools/gimprectangleselecttool.c: no constraint.

	This addresses bug #353936 -- I would say fixes it, but it
	probably needs some fine-tuning.  Also perhaps fixes
	bug #329817 a bit better than before.
	
2006-09-06  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimppluginmanager-history.c
	(gimp_plug_in_manager_history_add): bail out early if the
	procedure is already at the start of the list.

2006-09-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/tools-enums.[ch]: remove GimpCropMode enum;
	missed in previous commit.
	
2006-09-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/tools/gimpcroptool.c
	* app/tools/gimpcropoptions.[ch]: remove "crop vs resize"
	option, as recommended in bug #353936.
	
2006-09-06  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint-funcs/scale-funcs.[ch]: apply patch from Geert
	Jordaens to improve Lanczos scaling, with coding style
	cleanups; partly fixes bug #167956.
